SymTypeExpression and wrappers return a supplier in case the symbol can not be resolved immediatly